# kaizen

./: CMakeLists.txt  Makefile.arm  README.md  alexnet_test_arm.sh  build_arm.sh  lenet_test_arm.sh  setup_gcc.sh  test_arm.cpp  vgg_arm.sh
cuda/: Dockerfile.gpu  Makefile.gpu  run_gpu.sh  test_gpu.cu
docs/: API_DOCS.md  GPU.md  INTRO.md  PROFILER.md
src/: CMakeLists.txt  CNN.cpp  GKR.cpp  MLP.cpp  circuit.cpp  config_pc.hpp  constants.h  cuda_kernels.cu  cuda_kernels.h  cutlass_wrapper.cpp  cutlass_wrapper.h  fieldElement.cpp  fieldElement.hpp  flo-shani.c  flo-shani.h  inputCircuit.hpp  main.cpp  merkle_tree.cpp  merkle_tree.h  my_hhash.h  profiler.cpp  profiler.hpp  profiler_example.cpp  profiling_example_cnn.cpp  profiling_example_mlp.cpp  run_cnn_profiler.cpp  run_mlp_profiler.cpp  run_profiler_test.cpp
